@@ -89,7 +89,7 @@ public:
 	void SetMacroMode(FARMACROAREA Area);
 	int ID(void) const {return m_ID;}
 
-	typedef raii_wrapper<window_ptr, decltype(&window::Pin), decltype(&window::UnPin)> pinner;
+	typedef raii_wrapper<window_ptr, void(window::*)(), void(window::*)()> pinner;
 	pinner GetPinner() { return pinner(shared_from_this(), &window::Pin, &window::UnPin); }
 
 protected:
